monitoring/prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: k8ssergca-private-ca-issuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  name: prometheus-monitoring-ingress
  namespace: monitoring
spec:
  rules:
  - host: prometheus.k8s.serg.com
    http:
      paths:
      - backend:
          service:
            name: prometheus-service
            port:
              number: 9090
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - prometheus.k8s.serg.com
    secretName: prometheus-monitoring-ingress-cert
